chore: upgrade Nx 14.1 → 19.8, Next.js 12.1 → 14.2
Major dependency upgrades:
- Nx: 14.1.9 → 19.8.0
- Next.js: 12.1.5 → 14.2.35 (security patch)
- TypeScript: 4.6.4 → 4.8.4
- Jest: 27.5.1 → 29.7.0
- ESLint: 8.12.0 → 8.57.1
- ts-node: 9.1.1 → 10.9.1

Configuration changes:
- Remove deprecated workspace.json (now using project.json)
- Update next.config.js to use @nx/next composePlugins
- Remove next-compose-plugins dependency
- Add .next to .gitignore
- Update project.json files with new Nx format

--- a/apps/wrthwhl/project.json
+++ b/apps/wrthwhl/project.json
@@ -5,16 +5,16 @@
   "targets": {
     "build": {
       "executor": "@nrwl/next:build",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "defaultConfiguration": "production",
       "options": {
         "root": "apps/wrthwhl",
         "outputPath": "dist/apps/wrthwhl"
       },
       "configurations": {
-        "development": {},
+        "development": {
+          "outputPath": "apps/wrthwhl"
+        },
         "production": {}
       }
     },
@@ -53,9 +53,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/apps/wrthwhl"
-      ],
+      "outputs": ["coverage/apps/wrthwhl"],
       "options": {
         "jestConfig": "apps/wrthwhl/jest.config.ts",
         "passWithNoTests": true
@@ -63,13 +61,9 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "apps/wrthwhl/**/*.{ts,tsx,js,jsx}"
-        ]
+        "lintFilePatterns": ["apps/wrthwhl/**/*.{ts,tsx,js,jsx}"]
       }
     }
   },
