--- a/libs/content/project.json
+++ b/libs/content/project.json
@@ -5,20 +5,14 @@
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "libs/content/**/*.ts"
-        ]
+        "lintFilePatterns": ["libs/content/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/libs/content"
-      ],
+      "outputs": ["coverage/libs/content"],
       "options": {
         "jestConfig": "libs/content/jest.config.ts",
         "passWithNoTests": true
@@ -27,9 +21,7 @@
     "build": {
       "executor": "nx:run-commands",
       "options": {
-        "commands": [
-          "contentlayer build"
-        ],
+        "commands": ["contentlayer build"],
         "cwd": "libs/content"
       }
     }
