--- a/nx.json
+++ b/nx.json
@@ -5,7 +5,6 @@
     "defaultBase": "main"
   },
   "cli": {
-    "defaultCollection": "@nrwl/next",
     "packageManager": "pnpm"
   },
   "implicitDependencies": {
@@ -23,14 +22,6 @@
       }
     }
   },
-  "targetDependencies": {
-    "build": [
-      {
-        "target": "build",
-        "projects": "dependencies"
-      }
-    ]
-  },
   "generators": {
     "@nrwl/react": {
       "application": {
@@ -44,5 +35,10 @@
       }
     }
   },
-  "defaultProject": "wrthwhl"
+  "defaultProject": "wrthwhl",
+  "targetDefaults": {
+    "build": {
+      "dependsOn": ["^build"]
+    }
+  }
 }
