--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "@tabler/icons": "^1.78.0",
     "contentlayer": "^0.2.6",
     "core-js": "^3.6.5",
-    "next": "12.1.5",
-    "next-compose-plugins": "^2.2.1",
+    "next": "14.2.35",
     "next-contentlayer": "^0.2.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -29,41 +28,41 @@
   "devDependencies": {
     "@babel/core": "7.12.13",
     "@babel/preset-typescript": "7.12.13",
-    "@nrwl/cli": "14.1.9",
-    "@nrwl/cypress": "14.1.9",
-    "@nrwl/eslint-plugin-nx": "14.1.9",
-    "@nrwl/jest": "14.1.9",
-    "@nrwl/linter": "14.1.9",
-    "@nrwl/next": "14.1.9",
-    "@nrwl/react": "14.1.9",
-    "@nrwl/web": "14.1.9",
-    "@nrwl/workspace": "14.1.9",
+    "@nrwl/cli": "14.8.9",
+    "@nrwl/cypress": "19.8.0",
+    "@nrwl/eslint-plugin-nx": "19.8.0",
+    "@nrwl/jest": "19.8.0",
+    "@nrwl/linter": "19.8.0",
+    "@nrwl/next": "19.8.0",
+    "@nrwl/react": "19.8.0",
+    "@nrwl/web": "19.8.0",
+    "@nrwl/workspace": "19.8.0",
     "@svgr/webpack": "^5.4.0",
-    "@testing-library/react": "13.1.1",
-    "@types/jest": "27.4.1",
-    "@types/node": "16.11.7",
-    "@types/react": "18.3.18",
-    "@types/react-dom": "18.3.5",
-    "@typescript-eslint/eslint-plugin": "~5.18.0",
-    "@typescript-eslint/parser": "~5.18.0",
-    "babel-jest": "27.5.1",
+    "@testing-library/react": "15.0.6",
+    "@types/jest": "29.5.14",
+    "@types/node": "18.16.9",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
+    "babel-jest": "29.7.0",
     "babel-loader": "8.1.0",
     "cypress": "^9.1.0",
-    "eslint": "~8.12.0",
-    "eslint-config-next": "12.1.5",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
+    "eslint": "8.57.1",
+    "eslint-config-next": "14.2.3",
+    "eslint-config-prettier": "9.1.2",
+    "eslint-plugin-cypress": "2.15.2",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-react": "7.29.4",
-    "eslint-plugin-react-hooks": "4.5.0",
-    "jest": "27.5.1",
-    "nx": "14.1.9",
-    "prettier": "^2.5.1",
-    "react-test-renderer": "18.3.1",
-    "ts-jest": "27.1.4",
-    "ts-node": "9.1.1",
-    "typescript": "~4.6.2",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-react": "7.31.8",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "29.7.0",
+    "nx": "19.8.0",
+    "prettier": "2.8.8",
+    "react-test-renderer": "18.2.0",
+    "ts-jest": "29.1.5",
+    "ts-node": "10.9.1",
+    "typescript": "4.8.4",
     "url-loader": "^3.0.0"
   }
 }
